--- a/robofriends/.gitignore
+++ b/robofriends/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+dist
+dist-ssr
+*.local
 
 # testing
 /coverage
@@ -17,7 +20,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode/*
+!.vscode/extensions.json
+.idea
 
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
